--- a/assets/css/unmark.css
+++ b/assets/css/unmark.css
@@ -1559,7 +1559,7 @@ body.label-7 .main-content .marks-heading {
 	color: #989597;
 	display: inline-block;
 	vertical-align: bottom;
-	width: 65%;
+	width: 30px;
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis
